<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ff000000"
    tools:context="com.example.camera.CameraPreview" >

    <RelativeLayout
        android:id="@+id/resultLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#444444"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dip"
            android:padding="10dip"
            android:text="@string/status"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffffff" />

    </RelativeLayout>

    

    
     <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/resultLayout"
	    android:orientation="vertical" >

         <FrameLayout
             android:id="@+id/cam_preview"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="0.50"
             android:paddingBottom="10dip" />

         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="20dip"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="@string/activity"/>
             <TextView
                 android:id="@+id/activityValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dip"
                 android:textSize="20sp"
                 android:text="@string/activity_value"/>
         </RelativeLayout>

         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="20dip"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="@string/heart_rate"/>
             <TextView
                 android:id="@+id/heartRateValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dip"
                 android:textSize="20sp"
                 android:text="@string/heart_rate_value"/>
         </RelativeLayout>

         <Button
            android:id="@+id/btn_startmeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start" />
    </LinearLayout>


</RelativeLayout>